entering basic containers

--- a/index.html
+++ b/index.html
@@ -1,11 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Git Collaborate</title>
+
 </head>
+
 <body>
-    
+    <div class="mainContainer">
+        <div class="header"></div>
+        <div class="subContainer">
+            <div class="sideNav">
+                <div class="menuItem"></div>
+                <div class="menuItem"></div>
+                <div class="menuItem"></div>
+                <div class="menuItem"></div>
+            </div>
+            <div class="contentContainer">
+                <div class="productContainer">
+
+                </div>
+                <div class="productContainer">
+
+                </div>
+                <div class="productContainer">
+
+                </div>
+                <div class="productContainer">
+
+                </div>
+                <div class="productContainer">
+
+                </div>
+                <div class="productContainer">
+
+                </div>
+            </div>
+        </div>
+        <div class="footer">
+
+        </div>
+
+    </div>
+
 </body>
+
 </html>
