--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Git Collaborate</title>
-
+    <link rel="stylesheet" href="menueItem.css">
 </head>
 
 <body>
@@ -13,10 +13,10 @@
         <div class="header"></div>
         <div class="subContainer">
             <div class="sideNav">
-                <div class="menuItem"></div>
-                <div class="menuItem"></div>
-                <div class="menuItem"></div>
-                <div class="menuItem"></div>
+                <div class="menuItem">about us</div>
+                <div class="menuItem">cart</div>
+                <div class="menuItem">learn more</div>
+                <div class="menuItem">Contact us</div>
             </div>
             <div class="contentContainer">
                 <div class="productContainer">
