--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Git Collaborate</title>
+    <link rel="stylesheet" href="mainContainer.css">
 
 </head>
 
 <body>
     <div class="mainContainer">
         <div class="header"></div>
-        <div class="subContainer">
+        <div 3 class="subContainer">
             <div class="sideNav">
                 <div class="menuItem"></div>
                 <div class="menuItem"></div>
