--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Git Collaborate</title>
 <link rel="stylesheet" href="sideNav.css">
+<link rel="stylesheet" href="header.css">
 </head>
 
 <body>
