finshed the footer

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Git Collaborate</title>
     <link rel="stylesheet" href="Footer.css">
-<link rel="stylesheet" href="sideNav.css">
+    <link rel="stylesheet" href="sideNav.css">
 </head>
 
 <body>
@@ -41,7 +41,9 @@
             </div>
         </div>
         <div class="footer">
-
+            <div class="footerItem" id="leadingItem">Leading</div>
+            <div class="footerItem" id="MiddleItem">Middle</div>
+            <div class="footerItem" id="FinalItem">Final</div>
         </div>
 
     </div>
