finsh html build start with css

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Git Collaborate</title>
 <link rel="stylesheet" href="sideNav.css">
+<link rel="stylesheet" href="">
 </head>
 
 <body>
@@ -18,9 +19,17 @@
                 <div class="menuItem"></div>
                 <div class="menuItem"></div>
             </div>
-            <div class="contentContainer">
-                <div class="productContainer">
-
+            <div id="mainBody">
+                <div class="bodyItems">
+                        <div id="productName" class="productInfo"><h1>Title</h1></div>
+                        <div id="productImage" class="productInfo"><img src="" alt=""></div>
+                        <div id="productOptionsContainer" class="productInfo">
+                            <div id="productBtns" class="productInfo">
+                                <div id="productBuy" class="productInfo"><p>Buy Now</p></div>
+                                <div id="productAdd" class="productInfo"><img src="" alt=""></div>
+                            </div>
+                            <div id="productPrice" class="productInfo"><p>149$</p></div>
+                        </div>
                 </div>
                 <div class="productContainer">
 
