--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
         <div class="header"></div>
         <div class="subContainer">
             <div class="sideNav">
-                <div class="menuItem"></div>
-                <div class="menuItem"></div>
-                <div class="menuItem"></div>
-                <div class="menuItem"></div>
+                <div class="menuItem">Home</div>
+                <div class="menuItem">App</div>
+                <div class="menuItem">Products</div>
+                <div class="menuItem">Burger</div>
             </div>
             <div class="contentContainer">
                 <div class="productContainer">
