finsh products desgin

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Git Collaborate</title>
 <link rel="stylesheet" href="sideNav.css">
-<link rel="stylesheet" href="">
+<link rel="stylesheet" href="productContainer.css">
 </head>
 
 <body>
@@ -21,30 +21,59 @@
             </div>
             <div id="mainBody">
                 <div class="bodyItems">
-                        <div id="productName" class="productInfo"><h1>Title</h1></div>
-                        <div id="productImage" class="productInfo"><img src="" alt=""></div>
+                        <div id="productName" class="productInfo"><p>AirJordans</p></div>
+                        <div id="productImage" class="productInfo"><img src="https://myalpins.com/1281-home_default/women-nike-air-jordan-1-mid-light-smoke-grey.jpg" alt="AirJordans" width="284px" height="140px"></div>
                         <div id="productOptionsContainer" class="productInfo">
                             <div id="productBtns" class="productInfo">
                                 <div id="productBuy" class="productInfo"><p>Buy Now</p></div>
-                                <div id="productAdd" class="productInfo"><img src="" alt=""></div>
+                                <div id="productAdd" class="productInfo"><img src="https://www.pinclipart.com/picdir/middle/166-1664900_add-cart-plus-shopping-shopping-cart-icon-add.png" alt="Add to cart" height="40px" width="45px"></div>
                             </div>
                             <div id="productPrice" class="productInfo"><p>149$</p></div>
                         </div>
                 </div>
-                <div class="productContainer">
-
+                <div class="bodyItems">
+                    <div id="productName" class="productInfo"><p>AirJordans</p></div>
+                    <div id="productImage" class="productInfo"><img src="https://myalpins.com/1281-home_default/women-nike-air-jordan-1-mid-light-smoke-grey.jpg" alt="AirJordans" width="284px" height="140px"></div>
+                    <div id="productOptionsContainer" class="productInfo">
+                        <div id="productBtns" class="productInfo">
+                            <div id="productBuy" class="productInfo"><p>Buy Now</p></div>
+                            <div id="productAdd" class="productInfo"><img src="https://www.pinclipart.com/picdir/middle/166-1664900_add-cart-plus-shopping-shopping-cart-icon-add.png" alt="Add to cart" height="40px" width="45px"></div>
+                        </div>
+                        <div id="productPrice" class="productInfo"><p>149$</p></div>
+                    </div>
                 </div>
-                <div class="productContainer">
-
+                <div class="bodyItems">
+                    <div id="productName" class="productInfo"><p>AirJordans</p></div>
+                    <div id="productImage" class="productInfo"><img src="https://myalpins.com/1281-home_default/women-nike-air-jordan-1-mid-light-smoke-grey.jpg" alt="AirJordans" width="284px" height="140px"></div>
+                    <div id="productOptionsContainer" class="productInfo">
+                        <div id="productBtns" class="productInfo">
+                            <div id="productBuy" class="productInfo"><p>Buy Now</p></div>
+                            <div id="productAdd" class="productInfo"><img src="https://www.pinclipart.com/picdir/middle/166-1664900_add-cart-plus-shopping-shopping-cart-icon-add.png" alt="Add to cart" height="40px" width="45px"></div>
+                        </div>
+                        <div id="productPrice" class="productInfo"><p>149$</p></div>
+                    </div>
                 </div>
-                <div class="productContainer">
-
+                <div class="bodyItems">
+                    <div id="productName" class="productInfo"><p>AirJordans</p></div>
+                    <div id="productImage" class="productInfo"><img src="https://myalpins.com/1281-home_default/women-nike-air-jordan-1-mid-light-smoke-grey.jpg" alt="AirJordans" width="284px" height="140px"></div>
+                    <div id="productOptionsContainer" class="productInfo">
+                        <div id="productBtns" class="productInfo">
+                            <div id="productBuy" class="productInfo"><p>Buy Now</p></div>
+                            <div id="productAdd" class="productInfo"><img src="https://www.pinclipart.com/picdir/middle/166-1664900_add-cart-plus-shopping-shopping-cart-icon-add.png" alt="Add to cart" height="40px" width="45px"></div>
+                        </div>
+                        <div id="productPrice" class="productInfo"><p>149$</p></div>
+                    </div>
                 </div>
-                <div class="productContainer">
-
-                </div>
-                <div class="productContainer">
-
+                <div class="bodyItems">
+                    <div id="productName" class="productInfo"><p>AirJordans</p></div>
+                    <div id="productImage" class="productInfo"><img src="https://myalpins.com/1281-home_default/women-nike-air-jordan-1-mid-light-smoke-grey.jpg" alt="AirJordans" width="284px" height="140px"></div>
+                    <div id="productOptionsContainer" class="productInfo">
+                        <div id="productBtns" class="productInfo">
+                            <div id="productBuy" class="productInfo"><p>Buy Now</p></div>
+                            <div id="productAdd" class="productInfo"><img src="https://www.pinclipart.com/picdir/middle/166-1664900_add-cart-plus-shopping-shopping-cart-icon-add.png" alt="Add to cart" height="40px" width="45px"></div>
+                        </div>
+                        <div id="productPrice" class="productInfo"><p>149$</p></div>
+                    </div>
                 </div>
             </div>
         </div>
