fixing more bugs

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
     <div class="mainContainer">
         <div class="header"></div>
-        <div 3 class="subContainer">
+        <div class="subContainer">
             <div class="sideNav">
 
                 <div class="menuItem">Home</div>
@@ -29,7 +29,7 @@
 
 
             </div>
-            <div id="mainBody">
+            <div class="contentContainer">
                 <div class="bodyItems">
                         <div id="productName" class="productInfo"><p>AirJordans</p></div>
                         <div id="productImage" class="productInfo"><img src="https://myalpins.com/1281-home_default/women-nike-air-jordan-1-mid-light-smoke-grey.jpg" alt="AirJordans" width="284px" height="140px"></div>
