--- a/index.html
+++ b/index.html
@@ -6,20 +6,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Git Collaborate</title>
     <link rel="stylesheet" href="subContainer.css">
-
-<link rel="stylesheet" href="contentContainer.css">
- <link rel="stylesheet" href="Footer.css">
- <link rel="stylesheet" href="menuItem.css">
-<link rel="stylesheet" href="sideNav.css">
-<link rel="stylesheet" href="productContainer.css">
-<link rel="stylesheet" href="header.css">
+    <link rel="stylesheet" href="contentContainer.css">
+    <link rel="stylesheet" href="Footer.css">
+    <link rel="stylesheet" href="menuItem.css">
+    <link rel="stylesheet" href="sideNav.css">
+    <link rel="stylesheet" href="productContainer.css">
+    <link rel="stylesheet" href="header.css">
     <link rel="stylesheet" href="mainContainer.css">
+    <link rel="stylesheet" media="screen and (max-width:1000px)" href="style.css">
 </head>
 
 <body>
     <div class="mainContainer">
         <div class="header"></div>
         <div class="subContainer">
+            <div class="floatingBtn">
+                <div class="mobileMenu">
+                    <div class="menuItem">Home</div>
+                    <div class="menuItem">App</div>
+                    <div class="menuItem">Products</div>
+                    <div class="menuItem">Burger</div>
+                </div>
+                <div class="btn">+</div>
+            </div>
             <div class="sideNav">
 
                 <div class="menuItem">Home</div>
@@ -31,58 +40,108 @@
             </div>
             <div class="contentContainer">
                 <div class="bodyItems">
-                        <div id="productName" class="productInfo"><p>AirJordans</p></div>
-                        <div id="productImage" class="productInfo"><img src="https://myalpins.com/1281-home_default/women-nike-air-jordan-1-mid-light-smoke-grey.jpg" alt="AirJordans" width="284px" height="140px"></div>
-                        <div id="productOptionsContainer" class="productInfo">
-                            <div id="productBtns" class="productInfo">
-                                <div id="productBuy" class="productInfo"><p>Buy Now</p></div>
-                                <div id="productAdd" class="productInfo"><img src="https://www.pinclipart.com/picdir/middle/166-1664900_add-cart-plus-shopping-shopping-cart-icon-add.png" alt="Add to cart" height="40px" width="45px"></div>
+                    <div id="productName" class="productInfo">
+                        <p>AirJordans</p>
+                    </div>
+                    <div id="productImage" class="productInfo"><img
+                            src="https://myalpins.com/1281-home_default/women-nike-air-jordan-1-mid-light-smoke-grey.jpg"
+                            alt="AirJordans" width="284px" height="140px"></div>
+                    <div id="productOptionsContainer" class="productInfo">
+                        <div id="productBtns" class="productInfo">
+                            <div id="productBuy" class="productInfo">
+                                <p>Buy Now</p>
                             </div>
-                            <div id="productPrice" class="productInfo"><p>149$</p></div>
+                            <div id="productAdd" class="productInfo"><img
+                                    src="https://www.pinclipart.com/picdir/middle/166-1664900_add-cart-plus-shopping-shopping-cart-icon-add.png"
+                                    alt="Add to cart" height="40px" width="45px"></div>
                         </div>
-                </div>
-                <div class="bodyItems">
-                    <div id="productName" class="productInfo"><p>AirJordans</p></div>
-                    <div id="productImage" class="productInfo"><img src="https://myalpins.com/1281-home_default/women-nike-air-jordan-1-mid-light-smoke-grey.jpg" alt="AirJordans" width="284px" height="140px"></div>
-                    <div id="productOptionsContainer" class="productInfo">
-                        <div id="productBtns" class="productInfo">
-                            <div id="productBuy" class="productInfo"><p>Buy Now</p></div>
-                            <div id="productAdd" class="productInfo"><img src="https://www.pinclipart.com/picdir/middle/166-1664900_add-cart-plus-shopping-shopping-cart-icon-add.png" alt="Add to cart" height="40px" width="45px"></div>
+                        <div id="productPrice" class="productInfo">
+                            <p>149$</p>
                         </div>
-                        <div id="productPrice" class="productInfo"><p>149$</p></div>
                     </div>
                 </div>
                 <div class="bodyItems">
-                    <div id="productName" class="productInfo"><p>AirJordans</p></div>
-                    <div id="productImage" class="productInfo"><img src="https://myalpins.com/1281-home_default/women-nike-air-jordan-1-mid-light-smoke-grey.jpg" alt="AirJordans" width="284px" height="140px"></div>
+                    <div id="productName" class="productInfo">
+                        <p>AirJordans</p>
+                    </div>
+                    <div id="productImage" class="productInfo"><img
+                            src="https://myalpins.com/1281-home_default/women-nike-air-jordan-1-mid-light-smoke-grey.jpg"
+                            alt="AirJordans" width="284px" height="140px"></div>
                     <div id="productOptionsContainer" class="productInfo">
                         <div id="productBtns" class="productInfo">
-                            <div id="productBuy" class="productInfo"><p>Buy Now</p></div>
-                            <div id="productAdd" class="productInfo"><img src="https://www.pinclipart.com/picdir/middle/166-1664900_add-cart-plus-shopping-shopping-cart-icon-add.png" alt="Add to cart" height="40px" width="45px"></div>
+                            <div id="productBuy" class="productInfo">
+                                <p>Buy Now</p>
+                            </div>
+                            <div id="productAdd" class="productInfo"><img
+                                    src="https://www.pinclipart.com/picdir/middle/166-1664900_add-cart-plus-shopping-shopping-cart-icon-add.png"
+                                    alt="Add to cart" height="40px" width="45px"></div>
                         </div>
-                        <div id="productPrice" class="productInfo"><p>149$</p></div>
+                        <div id="productPrice" class="productInfo">
+                            <p>149$</p>
+                        </div>
                     </div>
                 </div>
                 <div class="bodyItems">
-                    <div id="productName" class="productInfo"><p>AirJordans</p></div>
-                    <div id="productImage" class="productInfo"><img src="https://myalpins.com/1281-home_default/women-nike-air-jordan-1-mid-light-smoke-grey.jpg" alt="AirJordans" width="284px" height="140px"></div>
+                    <div id="productName" class="productInfo">
+                        <p>AirJordans</p>
+                    </div>
+                    <div id="productImage" class="productInfo"><img
+                            src="https://myalpins.com/1281-home_default/women-nike-air-jordan-1-mid-light-smoke-grey.jpg"
+                            alt="AirJordans" width="284px" height="140px"></div>
                     <div id="productOptionsContainer" class="productInfo">
                         <div id="productBtns" class="productInfo">
-                            <div id="productBuy" class="productInfo"><p>Buy Now</p></div>
-                            <div id="productAdd" class="productInfo"><img src="https://www.pinclipart.com/picdir/middle/166-1664900_add-cart-plus-shopping-shopping-cart-icon-add.png" alt="Add to cart" height="40px" width="45px"></div>
+                            <div id="productBuy" class="productInfo">
+                                <p>Buy Now</p>
+                            </div>
+                            <div id="productAdd" class="productInfo"><img
+                                    src="https://www.pinclipart.com/picdir/middle/166-1664900_add-cart-plus-shopping-shopping-cart-icon-add.png"
+                                    alt="Add to cart" height="40px" width="45px"></div>
                         </div>
-                        <div id="productPrice" class="productInfo"><p>149$</p></div>
+                        <div id="productPrice" class="productInfo">
+                            <p>149$</p>
+                        </div>
                     </div>
                 </div>
                 <div class="bodyItems">
-                    <div id="productName" class="productInfo"><p>AirJordans</p></div>
-                    <div id="productImage" class="productInfo"><img src="https://myalpins.com/1281-home_default/women-nike-air-jordan-1-mid-light-smoke-grey.jpg" alt="AirJordans" width="284px" height="140px"></div>
+                    <div id="productName" class="productInfo">
+                        <p>AirJordans</p>
+                    </div>
+                    <div id="productImage" class="productInfo"><img
+                            src="https://myalpins.com/1281-home_default/women-nike-air-jordan-1-mid-light-smoke-grey.jpg"
+                            alt="AirJordans" width="284px" height="140px"></div>
                     <div id="productOptionsContainer" class="productInfo">
                         <div id="productBtns" class="productInfo">
-                            <div id="productBuy" class="productInfo"><p>Buy Now</p></div>
-                            <div id="productAdd" class="productInfo"><img src="https://www.pinclipart.com/picdir/middle/166-1664900_add-cart-plus-shopping-shopping-cart-icon-add.png" alt="Add to cart" height="40px" width="45px"></div>
+                            <div id="productBuy" class="productInfo">
+                                <p>Buy Now</p>
+                            </div>
+                            <div id="productAdd" class="productInfo"><img
+                                    src="https://www.pinclipart.com/picdir/middle/166-1664900_add-cart-plus-shopping-shopping-cart-icon-add.png"
+                                    alt="Add to cart" height="40px" width="45px"></div>
                         </div>
-                        <div id="productPrice" class="productInfo"><p>149$</p></div>
+                        <div id="productPrice" class="productInfo">
+                            <p>149$</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="bodyItems">
+                    <div id="productName" class="productInfo">
+                        <p>AirJordans</p>
+                    </div>
+                    <div id="productImage" class="productInfo"><img
+                            src="https://myalpins.com/1281-home_default/women-nike-air-jordan-1-mid-light-smoke-grey.jpg"
+                            alt="AirJordans" width="284px" height="140px"></div>
+                    <div id="productOptionsContainer" class="productInfo">
+                        <div id="productBtns" class="productInfo">
+                            <div id="productBuy" class="productInfo">
+                                <p>Buy Now</p>
+                            </div>
+                            <div id="productAdd" class="productInfo"><img
+                                    src="https://www.pinclipart.com/picdir/middle/166-1664900_add-cart-plus-shopping-shopping-cart-icon-add.png"
+                                    alt="Add to cart" height="40px" width="45px"></div>
+                        </div>
+                        <div id="productPrice" class="productInfo">
+                            <p>149$</p>
+                        </div>
                     </div>
                 </div>
             </div>
